--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -30,11 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-target/classes
-target/generated-sources
-target/generated-test-sources
-target/maven-archiver
-target/maven-status
-target/test-classes
-target/achat-1.0.jar
-target/achat-1.0.jar.original
